# PrxteinMPNN

./: .buildinfo  .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTOREGRESSIVE_ENCODER_CONTEXT_BUG_FIX.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_BUG_ANALYSIS.md  DEBUGGING_HANDOFF.md  DEBUGGING_PROGRESS_SUMMARY.md  DEBUGGING_SESSION_SUMMARY.md  EQUINOX_MIGRATION.md  FINAL_VALIDATION_RESULTS.md  HANDOFF.md  HANDOFF_VALIDATION_DEBUG.md  HUGGINGFACE_README.md  INVESTIGATION_NOTES.md  LAYER_BY_LAYER_FINDINGS.md  MERGE_SUMMARY.md  MIGRATION_COMPLETE.md  NEXT_SESSION_PROMPT.md  PROXIDE_LIMITATIONS.md  PROXIDE_UPGRADE_SPEC.md  PR_DESCRIPTION.md  README.md  SEQUENCE_RECOVERY_BUG_FIXES.md  SEQUENCE_RECOVERY_FIX_SUMMARY.md  STRUCTURE_MAPPING_IMPLEMENTATION_SUMMARY.md  TIED_POSITIONS_BUG_FIX_SUMMARY.md  VALIDATION_RESULTS.md  VALIDATION_SUMMARY.md  benchmark_omm_output.txt  benchmark_output.txt  benchmark_shake_iter100_output.txt  check_colab_pdb_loading.py  check_coords.py  check_model_params.py  check_w_e_shape.py  compare_backbone_atoms.py  (+153 more)
.agent/fixes/: vmap_dimension_fix.md
.agents/: PROXIDE_ATOM_ORDER_FIX.md  PROXIDE_CONFIG.md  PROXIDE_INTEGRATION_HANDOFF.md  PROXIDE_PHYSICS_INTEGRATION.md  README.md  TECHNICAL_DEBT.md  TRAINING_MERGE.md
.agents/archive/: TRAINING_MERGE.md
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  ci.yml  main.yml  parity-audit.yml  parity.yml  priox_ci.yml
_modules/: index.html
_modules/prxteinmpnn/: io.html  mpnn.html  run.html  sampling.html
_sources/: index.rst
_sources/api/: prxteinmpnn.model.decoder.rst  prxteinmpnn.model.encoder.rst  prxteinmpnn.model.projection.rst  prxteinmpnn.model.rst  prxteinmpnn.sampling.rst  prxteinmpnn.sampling.sample.rst  prxteinmpnn.sampling.sampling_step.rst  prxteinmpnn.utils.aa_convert.rst  prxteinmpnn.utils.coordinates.rst  prxteinmpnn.utils.data_structures.rst  prxteinmpnn.utils.foldcomp_utils.rst  prxteinmpnn.utils.graph.rst  prxteinmpnn.utils.normalize.rst  prxteinmpnn.utils.radial_basis.rst  prxteinmpnn.utils.residue_constants.rst
_sources/examples/: advanced_example.rst  index.rst
_sources/tutorials/: basic_usage.rst  installation.rst
_static/: styles.css
api/: modules.html  prxteinmpn.model.dense.html  prxteinmpnn.html  prxteinmpnn.io.html  prxteinmpnn.model.decoder.html  prxteinmpnn.model.encoder.html  prxteinmpnn.model.features.html  prxteinmpnn.model.html  prxteinmpnn.model.masked_attention.html  prxteinmpnn.model.projection.html  prxteinmpnn.mpnn.html  prxteinmpnn.sampling.html  prxteinmpnn.sampling.initialize.html  prxteinmpnn.sampling.sample.html  prxteinmpnn.sampling.sampling_step.html  prxteinmpnn.sampling.ste.html  prxteinmpnn.scoring.html  prxteinmpnn.scoring.score.html  prxteinmpnn.utils.aa_convert.html  prxteinmpnn.utils.autoregression.html  prxteinmpnn.utils.concatenate.html  prxteinmpnn.utils.coordinates.html  prxteinmpnn.utils.data_structures.html  prxteinmpnn.utils.decoding_order.html  prxteinmpnn.utils.foldcomp_utils.html  prxteinmpnn.utils.gelu.html  prxteinmpnn.utils.graph.html  prxteinmpnn.utils.html  prxteinmpnn.utils.normalize.html  prxteinmpnn.utils.radial_basis.html  prxteinmpnn.utils.residue_constants.html  prxteinmpnn.utils.types.html
data/: pdb_sample.index.json
data/cache/: 1CRN_system.npz  1L2Y_system.npz  1UAO_system.npz  1UBQ_system.npz  2GB1_system.npz  5AWL_system.npz
debug_scripts/: debug_ar_first_step.py  debug_autoregressive.py  debug_conditional_detailed.py
docs/: ALANINE_BIAS_ROOT_CAUSE.md  ALPHABET_CONVERSION_VERIFICATION.md  ARCHITECTURE_MIGRATION_PLAN.md  BUG_FIXES_SEQUENCE_RECOVERY.md  BUG_INVESTIGATION_SUMMARY.md  CURRENT_STATUS.md  DECODER_BUG_FIX_SUMMARY.md  DECODER_CONTEXT_COMPARISON.md  EQUINOX_FUNCTIONAL_EQUIVALENCE.md  EQUINOX_FUNCTIONAL_WRAPPERS.md  EQUINOX_MIGRATION_BUGFIX.md  FINAL_VALIDATION_RESULTS.md  FULL_FUNCTIONALITY_TODO.md  FUNCTIONAL_REFACTORING_COMPLETE.md  GMM_STABILITY.md  HDF5_STREAMING_FORMAT.md  HF_DEPLOYMENT.md  MIGRATION_QUICK_START.md  MILESTONE_5_COMPLETE.md  MULTI_STATE_IMPLEMENTATION.md  Makefile  NEXT_STEPS.md  PHASE_1_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHYSICS_INTEGRATION_COMPLETE.md  PHYSICS_INTEGRATION_SUMMARY.md  PHYSICS_TRAINER_IMPLEMENTATION_DETAILS.md  PHYSICS_TRAINER_INTEGRATION.md  PHYSICS_TRAINER_QUICK_START.md  QUICK_START_EQUIVALENCE.md  QUICK_START_STABILITY.md  SEQUENCE_EMBEDDING_BUG.md  SEQUENCE_RECOVERY_TESTS.md  STABILITY_SUMMARY.md  TIED_POSITIONS_BUG_FIXES.md  TODO_BLOCKED_MODULES.md  WEIGHT_VERIFICATION.md  future_jax_md_architecture.md  (+2 more)
docs/archive/: parity_validation_results_legacy.md
docs/parity/: parity_report.html  parity_report.md
docs/source/: conf.py  index.rst
examples/: advanced_example.html  example_notebook.ipynb  index.html  read_h5_streaming.py  test_nb.ipynb  train_with_accumulation.py  training_example_notebook.ipynb
notebooks/: colab_training_test.ipynb  multi_structure_comparison.py  prxteinmpnn_vs_colabdesign_comparison.ipynb
scripts/: __init__.py  analyze_validity_csv.py  check_parity_assets.py  check_parity_prereqs.py  colab_process_pdb.py  collect_parity_evidence.py  convert_all_xmls.py  convert_amber14.py  convert_parity_family_weights.py  convert_to_new_eqx.py  convert_weights.py  debug_import.py  debug_performance.py  export_parity_report_pdf.py  fetch_test_data.py  generate_parity_golden_fixtures.py  generate_parity_report.py  inspect_forcefield.py  legacy_physics_impl.py  max_length_usage_examples.py  migrate_all_weights.py  migrate_weights.py  push_all_to_hub.py  push_to_hub.py  regenerate_ff19sb.py  test_hf_download.py  update_hf_readme.py  upload_to_huggingface.py  verify_physics_parity.py
scripts/260410/: INDEX.md  verify_design_storage.py  (+3 more)
tests/: conftest.py  debug_proxide_mpnn_mismatch.py  debug_proxide_parity.py  test_adapter.py  test_decoder.py  test_eqx_equivalence.py  test_eqx_equivalence.py.disabled  test_eqx_wrappers.py  test_io.py  test_mpnn.py  test_prep_adapter.py  test_run.py  verify_dropout.py
tutorials/: basic_usage.html  index.html  installation.html  quickstart.html
(+631 files in other folders)
