[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prxteinmpnn"
version = "0.1.0"
description = "PrxteinMPNN: A functional interface for ProteinMPNN"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "jaxtyping",
    "jaxlib",
    "joblib",
    "flax",
    "biotite",
    "gmmx",
    "numpy",
    "mdtraj",
    "optax",
    "h5py",
    "grain",
    "pcax>=0.1.0",
    "tables>=3.10.2",
    "array-record>=0.8.1",
    "equinox>=0.13.2",
    "huggingface-hub>=1.0.1",
    "jax-md>=0.2.26",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxext-rediraffe",
    "sphinx-book-theme",
    "myst-nb",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "trio",
    "chex",
    "anyio",
    "pyright",
    "foldcomp"
]
dev = [
  "ruff",
  "pyright",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "sphinx-autobuild",
  "myst-parser",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinxext-rediraffe",
  "sphinx-book-theme",
  "myst-nb",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "trio",
  "chex",
  "anyio",
  "foldcomp"
]
foldcomp = [
    "foldcomp",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src/**/*.py"]
exclude = ["**/tests/**/*.py"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools.package-data]
include = [
    "prxteinmpnn/examples/*.ipynb",
    "prxteinmpnn/examples/*.pdb",
    "../weights/*.eqx",
]
