[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prxteinmpnn"
version = "0.1.0"
description = "PrxteinMPNN: A functional interface for ProteinMPNN"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "jaxtyping",
    "jaxlib",
    "joblib",
    "flax",
    "biotite",
    "gmmx",
    "numpy",
    "mdtraj",
    "optax",
    "h5py",
    "grain",
    "hydride",
    "pcax>=0.1.0",
    "tables>=3.10.2",
    "array-record>=0.8.1",
    "equinox>=0.13.2",
    "huggingface-hub>=1.0.1",
    "jax-md>=0.2.26",
    "msgpack-numpy>=0.4.8",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxext-rediraffe",
    "sphinx-book-theme",
    "myst-nb",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "trio",
    "chex",
    "anyio",
    "pyright",
    "foldcomp",
    "colabdesign @ git+https://github.com/sokrypton/ColabDesign.git@e31a56f",
]
dev = [
  "ruff",
  "pyright",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "sphinx-autobuild",
  "myst-parser",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinxext-rediraffe",
  "sphinx-book-theme",
  "myst-nb",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "trio",
  "chex",
  "anyio",
  "foldcomp",
  "colabdesign @ git+https://github.com/sokrypton/ColabDesign.git@e31a56f"
]
foldcomp = [
    "foldcomp",
]

[tool.ruff]
line-length = 100
fix = true
indent-width = 2
force-exclude = true
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "tests",
    "examples",
    "scripts",
    "*.ipynb",
    "src/prxteinmpnn/training/data/download_and_process.py",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PD", "D203", "D213"]
pylint.max-args = 15

[tool.ruff.lint.per-file-ignores]
"src/prxteinmpnn/run.py" = ["E402", "PLR0913", "ANN401"]
"src/prxteinmpnn/io/parsing.py" = ["ANN401"]
"tests/test_adapter.py" = ["S101", "T201", "ANN201", "INP001", "PLC0415", "SLF001"]
"scripts/**/*.py" = ["T201", "INP001"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src/**/*.py"]
exclude = ["**/tests/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "torch>=2.9.1",
]
training = [
    "wandb>=0.23.0",
]

[tool.setuptools.package-data]
include = ["prxteinmpnn/model/original/*.pkl", "prxteinmpnn/model/soluble/*.pkl", "prxteinmpnn/examples/*.ipynb", "prxteinmpnn/examples/*.pdb",]
