[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prxteinmpnn"
version = "0.1.0"
description = "PrxteinMPNN: A functional interface for ProteinMPNN"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "jaxtyping",
    "joblib",
    "psutil",
    "flax",
    "gmmx",
    "numpy",
    "optax",
    "h5py",
    "grain",
    "pcax>=0.1.0",
    "array-record>=0.8.1",
    "equinox>=0.13.2",
    "huggingface-hub>=1.0.1",
    "msgpack-numpy>=0.4.8",
    "proxide@ git+https://github.com/maraxen/proxide.git", 
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda13]",
]
tpu = [
    "jax[tpu]",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxext-rediraffe",
    "sphinx-book-theme",
    "myst-nb",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "trio",
    "chex",
    "anyio",
    "ty",
    "foldcomp",
    "colabdesign @ git+https://github.com/sokrypton/ColabDesign.git@e31a56f",
    "pytest-xdist",
    "mdtraj",
]
dev = [
  "ruff",
  "ty",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "sphinx-autobuild",
  "myst-parser",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinxext-rediraffe",
  "sphinx-book-theme",
  "myst-nb",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "trio",
  "chex",
  "anyio",
  "foldcomp",
  "colabdesign @ git+https://github.com/sokrypton/ColabDesign.git@e31a56f",
  "mdtraj",
]
foldcomp = [
    "foldcomp",
]

[tool.ruff]
line-length = 100
fix = true
indent-width = 2
force-exclude = true
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "tests",
    "examples",
    "scripts",
    "*.ipynb",
    "src/prxteinmpnn/training/data/download_and_process.py",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PD", "D203", "D213"]
pylint.max-args = 15

[tool.ruff.lint.per-file-ignores]
"src/prxteinmpnn/run.py" = ["E402", "PLR0913", "ANN401"]
"src/prxteinmpnn/io/parsing.py" = ["ANN401"]
"tests/test_adapter.py" = ["S101", "T201", "ANN201", "INP001", "PLC0415", "SLF001"]
"scripts/**/*.py" = ["T201", "INP001"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ty.environment]
root = ["src/prxteinmpnn"]

[tool.ty.rules]
invalid-type-form = "ignore"

[dependency-groups]
dev = [
    "torch>=2.9.1",
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
]

[tool.setuptools.package-data]
include = ["prxteinmpnn/model/original/*.pkl", "prxteinmpnn/model/soluble/*.pkl", "prxteinmpnn/examples/*.ipynb", "prxteinmpnn/examples/*.pdb",]
